--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -53,8 +53,14 @@ jobs:
         script: |
           sudo apt-get update
           sudo apt-get install -y docker.io
-          sudo apt-get install -y docker-compose-plugin
+          DOCKER_CONFIG=${DOCKER_CONFIG:-$HOME/.docker}
+          mkdir -p $DOCKER_CONFIG/cli-plugins
+          curl -SL https://github.com/docker/compose/releases/download/v2.29.6/docker-compose-linux-x86_64 -o $DOCKER_CONFIG/cli-plugins/docker-compose
+          chmod +x $DOCKER_CONFIG/cli-plugins/docker-compose
           sudo usermod -aG docker ubuntu
+          newgrp docker
+          
+
           
           # pull latest images
           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/mern-backend
