--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -41,6 +41,16 @@ jobs:
       run: |
         docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/mern-root .
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/mern-root
+    
+    - name: Copy docker-compose.yml to EC2
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ubuntu
+        key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+        source: "docker-compose.yml"
+        target: "/home/ubuntu/"
+          
 
     # Deploy on EC2 using docker-compose
     - name: SSH into EC2 and deploy with docker-compose
@@ -59,7 +69,7 @@ jobs:
           chmod +x $DOCKER_CONFIG/cli-plugins/docker-compose
           sudo usermod -aG docker ubuntu
           newgrp docker
-          
+
 
           
           # pull latest images
