--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -61,6 +61,8 @@ jobs:
         username: ubuntu
         key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
         script: |
+          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" > /home/ubuntu/docker-compose.env
+          echo "MONGO_URI=${{ secrets.MONGO_URI }}" >> /home/ubuntu/docker-compose.env
           sudo apt-get update
           sudo apt-get install -y docker.io
           DOCKER_CONFIG=${DOCKER_CONFIG:-$HOME/.docker}
