--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy to EC2
+name: Build Infra + Deploy App
 
 on:
   push:
@@ -6,16 +6,38 @@ on:
       - master
 
 jobs:
-  build_and_deploy:
+  infra_and_deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out code
-      uses: actions/checkout@v2
+    # Checkout repo
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-    # Set up Docker
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-south-1   # change to your region
+
+    # Terraform setup
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v2
+
+    - name: Terraform Init
+      working-directory: ./infra
+      run: terraform init
+
+    - name: Terraform Apply
+      working-directory: ./infra
+      run: terraform apply -auto-approve
+
+    # Get EC2 Public IP from Terraform output
+    - name: Get EC2 IP
+      id: tf-output
+      working-directory: ./infra
+      run: echo "EC2_IP=$(terraform output -raw ec2_public_ip)" >> $GITHUB_ENV
 
     # Log in to Docker Hub
     - name: Log in to Docker Hub
@@ -24,45 +46,45 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Build and push backend image
+    # Build + Push backend image
     - name: Build and push backend
       run: |
         docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/mern-backend ./backend
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/mern-backend
 
-    # Build and push frontend image
+    # Build + Push frontend image
     - name: Build and push frontend
       run: |
         docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/mern-frontend ./frontend
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/mern-frontend
 
-    # Build and push main/root image
+    # Build + Push root image
     - name: Build and push root
       run: |
         docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/mern-root .
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/mern-root
-    
+
+    # Copy docker-compose to EC2
     - name: Copy docker-compose.yml to EC2
       uses: appleboy/scp-action@master
       with:
-        host: ${{ secrets.EC2_HOST }}
+        host: ${{ env.EC2_IP }}
         username: ubuntu
         key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
         source: "docker-compose.yaml"
         target: "/home/ubuntu/"
-          
 
-    # Deploy on EC2 using docker-compose
-    - name: SSH into EC2 and deploy with docker-compose
+    # Deploy on EC2 with docker-compose
+    - name: SSH into EC2 and deploy
       uses: appleboy/ssh-action@master
       with:
-        debug: true
-        host: ${{ secrets.EC2_HOST }}
+        host: ${{ env.EC2_IP }}
         username: ubuntu
         key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
         script: |
           echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" > /home/ubuntu/docker-compose.env
           echo "MONGO_URI=${{ secrets.MONGO_URI }}" >> /home/ubuntu/docker-compose.env
+          
           sudo apt-get update
           sudo apt-get install -y docker.io
           sudo usermod -aG docker ubuntu
