--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -37,7 +37,9 @@ jobs:
     - name: Get EC2 IP
       id: tf-output
       working-directory: ./infra
-      run: echo "EC2_IP=$(terraform output -raw ec2_public_ip)" >> $GITHUB_ENV
+      run: |
+        ip=$(terraform output -raw ec2_public_ip | tr -d '\r')
+        echo "EC2_IP=$ip" >> $GITHUB_ENV
 
     # Log in to Docker Hub
     - name: Log in to Docker Hub
