--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -38,7 +38,7 @@ jobs:
       id: tf-output
       working-directory: ./infra
       run: |
-        ip=$(terraform output -raw ec2_public_ip -no-color)
+        ip=$(terraform output -raw ec2_public_ip | tr -d '\r')
         echo "EC2_IP=$ip" >> $GITHUB_ENV
 
     # Log in to Docker Hub
