--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,12 +14,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    # Configure AWS credentials
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-south-1   # change to your region
+        aws-region: ap-south-1
 
     # Terraform setup
     - name: Set up Terraform
@@ -31,7 +32,7 @@ jobs:
 
     - name: Terraform Apply
       working-directory: ./infra
-      run: terraform apply -auto-approve -var="ec2_ssh_pubkey=${{secrets.EC2_SSH_PUBLIC_KEY}}"
+      run: terraform apply -auto-approve -var="ec2_ssh_pubkey=${{ secrets.EC2_SSH_PUBLIC_KEY }}"
 
     # Get EC2 Public IP from Terraform output
     - name: Get EC2 IP
@@ -40,6 +41,7 @@ jobs:
       run: |
         ip=$(terraform output -raw ec2_public_ip | tr -d '\r')
         echo "EC2_IP=$ip" >> $GITHUB_ENV
+        echo "EC2 IP: $ip"
 
     # Log in to Docker Hub
     - name: Log in to Docker Hub
@@ -86,23 +88,25 @@ jobs:
         script: |
           echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" > /home/ubuntu/docker-compose.env
           echo "MONGO_URI=${{ secrets.MONGO_URI }}" >> /home/ubuntu/docker-compose.env
-          
-          sudo apt-get update
-          sudo apt-get install -y docker.io
-          sudo usermod -aG docker ubuntu
-          newgrp docker
+
+          # Install Docker + Compose if missing
+          if ! command -v docker &> /dev/null; then
+            sudo apt-get update
+            sudo apt-get install -y docker.io
+          fi
+
           DOCKER_CONFIG=${DOCKER_CONFIG:-$HOME/.docker}
           mkdir -p $DOCKER_CONFIG/cli-plugins
-          curl -SL https://github.com/docker/compose/releases/download/v2.29.6/docker-compose-linux-x86_64 -o $DOCKER_CONFIG/cli-plugins/docker-compose
-          chmod +x $DOCKER_CONFIG/cli-plugins/docker-compose
+          if [ ! -f $DOCKER_CONFIG/cli-plugins/docker-compose ]; then
+            curl -SL https://github.com/docker/compose/releases/download/v2.29.6/docker-compose-linux-x86_64 -o $DOCKER_CONFIG/cli-plugins/docker-compose
+            chmod +x $DOCKER_CONFIG/cli-plugins/docker-compose
+          fi
 
-
-          
           # pull latest images
           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/mern-backend
           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/mern-frontend
           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/mern-root
-          
+
           # restart containers
-          docker compose down || true
-          docker compose up -d --build
+          docker compose --env-file /home/ubuntu/docker-compose.env down || true
+          docker compose --env-file /home/ubuntu/docker-compose.env up -d --build
