terraform output debug

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -39,9 +39,13 @@ jobs:
       id: tf-output
       working-directory: ./infra
       run: |
-        ip=$(terraform output -raw ec2_public_ip 2>/dev/null | tr -d '\r' | tr -d '\n')
+        ip=$(terraform output -raw ec2_public_ip
+         | tr -d '\r' | tr -d '\n')
         echo "ip=$ip" >> $GITHUB_OUTPUT
-        echo "EC2 IP: $ip"
+
+    - name: Debug EC2 IP
+      run: echo "Deployed IP = ${{ steps.tf-output.outputs.ip }}"
+      
 
     # 5️⃣ Log in to Docker Hub
     - name: Log in to Docker Hub
