--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - master
-
+    paths-ignore:
+      - "README.md"
+      - ".github/workflows/infra.yml"
 jobs:
   infra_and_deploy:
     runs-on: ubuntu-latest
