--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths-ignore:
-      - "README.md"
+      - "readme.md"
       - ".github/workflows/infra.yml"
 jobs:
   infra_and_deploy:
